Added one additonal page

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <p>Copyright © ArtemisDevGroup</p>
 
     <div class="legal-link-container">
-      <a href="https://github.com/ArtemisDevGroup/artemisdevgroup.github.io/blob/main/LICENSE.md" target="_blank">License</a>
+      <a href="https://github.com/ArtemisDevGroup/artemisdevgroup.github.io/blob/main/LICENSE" target="_blank">License</a>
     </div>
   </footer>
 </body>
