Added files and references to all pages.

--- a/api_reference.html
+++ b/api_reference.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/x-icon" href="resources/img/Logo256x.png">
 
-  <title>Download - Artemis</title>
+  <title>Api Reference - Artemis</title>
 </head>
 <body>
   <nav class="top-navbar">
@@ -20,14 +20,12 @@
 
     <div class="top-navbar-container">
       <a href="index.html">Home</a>
-      <a href="" class="active">Download</a>
+      <a href="download.html">Download</a>
       <a href="for_developers.html">For Developers</a>
       <a href="extensions.html">Extensions</a>
-      <a href="api_reference.html">API Reference</a>
+      <a href="" class="active">API Reference</a>
     </div>
   </nav>
-
-  
 
   <footer>
     <h1>Artemis</h1>
