--- a/index.html
+++ b/index.html
@@ -11,21 +11,19 @@
 </head>
 <body>
   <nav class="top-navbar">
-    <div class="top-navbar-container">
-      <a href="" class="active">Home</a>
-      <a href="">Download</a>
-      <a href="">For Developers</a>
-      <a href="">Extensions</a>
-      <a href="">API Reference</a>
+    <div class="top-navbar-logo-container">
+      <img src="resources/img/Logo256x.png" alt="Artemis Logo">
+      <p>Artemis</p>
     </div>
 
     <div class="top-navbar-divider"></div>
 
-    <div class="top-navbar-logo-container">
-      <div class="top-navbar-image-container">
-        <img src="resources/img/Logo256x.png" alt="Artemis Logo">
-      </div>
-      <p>Artemis</p>
+    <div class="top-navbar-container">
+      <a href="" class="active">Home</a>
+      <a href="download.html">Download</a>
+      <a href="for_developers.html">For Developers</a>
+      <a href="extensions.html">Extensions</a>
+      <a href="api_reference.html">API Reference</a>
     </div>
   </nav>
 
@@ -36,15 +34,36 @@
 
   <main>
     <section class="question">
-      <h2>Question</h2>
-      <p>Answer</p>
-      <img src="" alt="Image">
+      <div>
+        <h2>What <i>is</i> Artemis?</h2>
+        <p>
+          Project Artemis is a tool developed by a small team of reverse engineers and programmers aiming to make playing a legacy build of Rainbow Six: Siege as easy, seamless and enjoyable as possible.
+          <br><br>
+          Artemis provides a number of modifications for all target audiences.
+          It provides everything from fun gamemodes and freely configurable equipment to full fetched cheat features such as bone ESP and aimbot.
+          <br><br>
+          Last but not least, Artemis provides a full-fetched extension framework for anyone to use to create and share their own creations with.
+          Whether you are an advanced user, or someone who would just like to try and set foot in the mod-making world of Rainbow Six: Siege, you may find the Artemis Extension Framework to be useful to you.
+        </p>
+      </div>
+
+      <img src="TEMP.jpg" alt="Image">
     </section>
 
     <section class="question">
-      <h2>Question</h2>
-      <p>Answer</p>
-      <img src="" alt="Image">
+      <div>
+        <h2>But <i>what</i> sets Artemis apart?</h2>
+        <p>
+          Project Artemis is aimed to be an official, professional, reliable, and fully open source set of tools delivering clarity to the user through intuitive and easy to use software.
+          This is to make Artemis as broadly accessible as possible, regardless of your amount of experience with old Rainbow Six: Siege.
+          <br><br>
+          The current issue with publicly available software for interacting with old versions of Rainbow Six: Siege is their poorly designed user interfaces and confusing ways of working.
+          This both confuses and scares new members of its community.
+          The main goal of Project Artemis is for it to be an exception to this rule.
+        </p>
+      </div>
+
+      <img src="TEMP.jpg" alt="Image">
     </section>
 
     <section class="contributor-section">
@@ -110,6 +129,7 @@
 
     <div class="legal-link-container">
       <a href="https://github.com/ArtemisDevGroup/artemisdevgroup.github.io/blob/main/LICENSE" target="_blank">License</a>
+      <a href="contact.html">Contact</a>
     </div>
   </footer>
 </body>
