Started adding hamburger style navigation menu for mobile.

--- a/index.html
+++ b/index.html
@@ -18,13 +18,19 @@
 
     <div class="top-navbar-divider"></div>
 
-    <div class="top-navbar-container">
+    <div class="top-navbar-container" id="link-container">
       <a href="" class="active">Home</a>
       <a href="download.html">Download</a>
       <a href="for_developers.html">For Developers</a>
       <a href="extensions.html">Extensions</a>
       <a href="api_reference.html">API Reference</a>
     </div>
+
+    <button class="hamburger-button">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </button>
   </nav>
 
   <header id="front-page-header">
