Testing another solution for image aspect ratio on mobile.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <div class="top-navbar-divider"></div>
 
     <div class="top-navbar-container" id="link-container">
+      <button id="menu-close-button">
+        <p>&#x2715;</p>
+      </button>
       <a href="" class="active">Home</a>
       <a href="download.html">Download</a>
       <a href="for_developers.html">For Developers</a>
@@ -26,7 +29,7 @@
       <a href="api_reference.html">API Reference</a>
     </div>
 
-    <button class="hamburger-button">
+    <button class="remove-on-desktop" id="menu-button">
       <span class="bar"></span>
       <span class="bar"></span>
       <span class="bar"></span>
@@ -138,5 +141,7 @@
       <a href="contact.html">Contact</a>
     </div>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
