Finished work on navbar, minor adjustment to footer.

--- a/download.html
+++ b/download.html
@@ -18,25 +18,36 @@
 
     <div class="top-navbar-divider"></div>
 
-    <div class="top-navbar-container">
+    <div class="top-navbar-container nav-closed" id="link-container">
+      <button id="menu-close-button">
+        <p>&#x2715;</p>
+      </button>
       <a href="index.html">Home</a>
       <a href="" class="active">Download</a>
       <a href="for_developers.html">For Developers</a>
       <a href="extensions.html">Extensions</a>
       <a href="api_reference.html">API Reference</a>
     </div>
+
+    <button id="menu-button">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </button>
   </nav>
 
   
 
   <footer>
     <h1>Artemis</h1>
-    <p>Copyright © ArtemisDevGroup</p>
+    <p>Copyright © Artemis Group 2024</p>
 
     <div class="legal-link-container">
       <a href="https://github.com/ArtemisDevGroup/artemisdevgroup.github.io/blob/main/LICENSE" target="_blank">License</a>
       <a href="contact.html">Contact</a>
     </div>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
