--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="top-navbar-divider"></div>
 
-    <div class="top-navbar-container" id="link-container">
+    <div class="top-navbar-container nav-closed" id="link-container">
       <button id="menu-close-button">
         <p>&#x2715;</p>
       </button>
@@ -29,7 +29,7 @@
       <a href="api_reference.html">API Reference</a>
     </div>
 
-    <button class="remove-on-desktop" id="menu-button">
+    <button id="menu-button">
       <span class="bar"></span>
       <span class="bar"></span>
       <span class="bar"></span>
@@ -66,7 +66,7 @@
           Project Artemis is aimed to be an official, professional, reliable, and fully open source set of tools delivering clarity to the user through intuitive and easy to use software.
           This is to make Artemis as broadly accessible as possible, regardless of your amount of experience with old Rainbow Six: Siege.
           <br><br>
-          The current issue with publicly available software for interacting with old versions of Rainbow Six: Siege is their poorly designed user interfaces and confusing ways of working.
+          The current issue with publicly available software for interacting with old versions of Rainbow Six: Siege is their poorly designed user interfaces and unintuitive ways of functioning.
           This both confuses and scares new members of its community.
           The main goal of Project Artemis is for it to be an exception to this rule.
         </p>
@@ -134,7 +134,7 @@
 
   <footer>
     <h1>Artemis</h1>
-    <p>Copyright © ArtemisDevGroup</p>
+    <p>Copyright © Artemis Group 2024</p>
 
     <div class="legal-link-container">
       <a href="https://github.com/ArtemisDevGroup/artemisdevgroup.github.io/blob/main/LICENSE" target="_blank">License</a>
